# TrabalhoTP1

./: CMakeLists.txt  Interfaces.cpp  Interfaces.h  README.md  armazenamento.cpp  armazenamento.h  camadaApresentacao.cpp  camadaApresentacao.h  camadaServico.cpp  camadaServico.h  dominios.cpp  dominios.h  entidades.cpp  entidades.h  interfaces.cpp  interfaces.h  main.cpp  testes.cpp  testes.h  testesEntidades.cpp  testesEntidades.h
